fixing tags cloud alignment

--- a/src/frontend/src/app/draft-list/tags/tags.component.less
+++ b/src/frontend/src/app/draft-list/tags/tags.component.less
@@ -6,3 +6,8 @@
     display: inline;
     margin: 5pt;
 }
+
+.tag {
+    margin-top: 0;
+    margin-bottom: 2pt;
+}
